syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.vertx.protobuf";

package io.vertx.protobuf;

import "datetime.proto";

message Struct {
  map<string, Value> fields = 1;
}

message Value {
  oneof kind {
    NullValue null_value = 1;
    Struct json_object_value = 2;
    ListValue json_array_value = 3;
    bool bool_value = 4;
    string string_value = 5;
    int32 integer_value = 6;
    int64 long_value = 7;
    double double_value = 8;
    float float_value = 9;
    Instant instant_value = 10;
    bytes binary_value = 11;
  }
}

enum NullValue {
  NULL_VALUE = 0;
}

message ListValue {
  repeated Value values = 1;
}
